[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
wasm-bindgen-futures = "0.4.33"
reqwasm = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
web-sys = "0.3.58"
